modifications on Report

--- a/Rapport/Rapport_UGEGreed.tex
+++ b/Rapport/Rapport_UGEGreed.tex
@@ -18,6 +18,7 @@
 \usepackage[colorlinks]{hyperref}
 \renewcommand{\thesection}{\arabic{section}}
 \title{Rapport sur le projet UGEGreed}
+\date{}
 \author{DEBATS Julien - LY-IENG Steven}
 
 \begin{document}
@@ -83,6 +84,8 @@ Au début n'ayant pas le sujet assez clair, nous avons commencé a faire une RFC
 \paragraph{}
 Cependant lors de la soutenance de la RFC il nous à été montré que notre RFC n'était pas vraiment ce qui était attendu, mais rien de grave c'était quelques petites choses à corriger.
 Nous avons alors demandé à notre professeurs de plus amples explications pour mieux cerner ce qui était demandé et améliorer notre RFC, aussi pendant ce temps nous avons éssayé de commencer à travailler sur la partie code du protocole.
+\subsection{Difficulté sur le code}
+Au début du projet nous ne savions pas exactement comment commencer mais nous avons 
 \section{Division du travail}
 \paragraph{}
 Pour ce qui est du partage du travail nous avons partagé assez équitablement
