--- a/Rapport/Rapport_UGEGreed.tex
+++ b/Rapport/Rapport_UGEGreed.tex
@@ -56,13 +56,13 @@ Vous pouvez consulter notre RFC à tout moment
 \href {https://gitlab.com/Setsulys/ugegreed-debats-ly-ieng/-/blob/main/GreedRfc.md}{ici}
 \subsection{Code}
 \paragraph{}
-Nous avons commencé à coder le projet en travaillant sur le Readers, que nous avons pensé grace à notre RFC, il y aura donc un URLReader, INTreader et un LONGReader. Ensuite nous avons décidé de commencer à l'aide des derniers TP de Réseau la partie connexion entre les applications.
+Nous avons commencé à coder le projet en travaillant sur le Readers, que nous avons pensé grâce à notre RFC, il y aura donc un URLReader, INTreader et un LONGReader. Ensuite, nous avons décidé de commencer à l'aide des derniers TP de Réseau la partie connexion entre les applications.
 TODO
 \section{Utilisation}
 \subsection{Connexion}
 TODO
 \paragraph{}
-Pour pouvoir lancer le code il faudra se rendre au niveau du //jar// et lancer la commande 
+Pour pouvoir lancer le code, il faudra se rendre au niveau du //jar// et lancer la commande 
 \paragraph{}
 Pour la root
 \begin{lstlisting}
@@ -80,20 +80,23 @@ TODO
 \section{Difficulté rencontré}
 \subsection{Difficulté sur la RFC}
 \paragraph{}
-Au début n'ayant pas le sujet assez clair, nous avons commencé a faire une RFC qui n'était pas du tout en rapport avec le sujet du projet, cependant à l'aide de Monsieur Carayol, nous avons mieux appréhendé le sujet et avons pu partir sur de bonnes bases.
+Au début n'ayant pas le sujet assez clair, nous avons commencé à faire une RFC qui n'était pas du tout en rapport avec le sujet du projet, cependant à l'aide de Monsieur Carayol, nous avons mieux appréhendé le sujet et avons pu partir sur de bonnes bases.
 \paragraph{}
-Cependant lors de la soutenance de la RFC il nous à été montré que notre RFC n'était pas vraiment ce qui était attendu, mais rien de grave c'était quelques petites choses à corriger.
-Nous avons alors demandé à notre professeurs de plus amples explications pour mieux cerner ce qui était demandé et améliorer notre RFC, aussi pendant ce temps nous avons éssayé de commencer à travailler sur la partie code du protocole.
+Cependant, lors de la soutenance de la RFC, il nous a été montré que notre RFC n'était pas vraiment ce qui était attendu, mais rien de grave, c'étaient quelques petites choses à corriger.
+Nous avons alors demandé à notre enseignant de plus amples explications pour mieux cerner ce qui était demandé et améliorer notre RFC, aussi pendant ce temps nous avons essayé de commencer à travailler sur la partie code du protocole.
 \subsection{Difficulté sur le code}
-Au début du projet nous ne savions pas exactement comment commencer mais nous avons 
+Au début du projet, nous ne savions pas exactement comment commencer, mais après avoir pataugé un peu, on a essayé plusieurs choses ce qui nous a permis  de nous débloquer.
+Aussi, nous avons eu un problème de compilation lorsque l'on devait utiliser la classe des Tables de Routages dans la classe principale, la classe de routage n'était pas reconnue lors de la compilation et après avoir fait plusieurs tests et demandé au professeur, il s'avérait que le problème ne venait pas de nous, mais de l'ide Eclipse, car du côté de notre enseignant tout avait marché alors qu'il utilisait Intelij.
 \section{Division du travail}
 \paragraph{}
-Pour ce qui est du partage du travail nous avons partagé assez équitablement
+Pour ce qui est du partage du travail nous avons partagé assez équitablement, on a essayé de faire un maximum pour éviter que la charge de travail repose plus sur une personne qu'une autre.
 \subsection{RFC}
 \paragraph{}
-Pour la RFC on a beaucoup travaillé de notre coté mais on faisait des points pour assez vite comprendre la situation et échanger les idées entre nous et nous mettre d'accord dessus ou non.
+Pour la RFC, on a beaucoup travaillé de notre coté, mais on faisait des points pour assez vite comprendre la situation et échanger les idées entre nous et nous mettre d'accord dessus ou non.
 \subsection{Code}
 \paragraph{}
-A ce niveau on essayait d'avancer chacun de notre coté lorsque l'on pouvait, mais surtout on a essayé un maximum de coder ensemble sur Eclipse à l'aide de l'extension CodeTogether comme ca il était assez simple de savoir assez rapidement d'où venais l'erreur et on pouvais intervenir plus rapidement, lorsque l'on travaillait ensemble sur CodeTogether on essayait d'envoyer un peu prêt le même nombre de commits chacun sur le git
+À ce niveau, on essayait d'avancer chacun de notre côté lorsque l'on pouvait, mais surtout, on a essayé un maximum de coder ensemble sur Eclipse à l'aide de l'extension CodeTogether comme ça, il était assez simple de savoir assez rapidement d'où venais l'erreur et on pouvait intervenir plus rapidement, lorsque l'on travaillait ensemble sur CodeTogether, on essayait d'envoyer un peu prêt le même nombre de commits chacun sur le git
 \section{Annexe}
+\subsection{Commentaires}
+On a trouvé le projet de réseau plutôt intéressant, un projet qui nous laissait beaucoup de liberté, où il fallait poser beaucoup de questions pour pouvoir se donner une ligne directrice, même si le projet était assez complexe et nous pensions que le projet serait très très long, nous avons pris du plaisir à travailler dessus.
 \end{document}
